Fix stars alignment

--- a/src/styl/components.styl
+++ b/src/styl/components.styl
@@ -11,6 +11,8 @@ $game-rating-default($scale-size, $with-styles = true) {
     color: $end-screen-info-gray;
     vertical-align: middle;
     letter-spacing: 5px;
+    /* Required for all androids <= 4.3 */
+    text-align: center;
   }
 }
 
